Fix header spacing

--- a/template.css
+++ b/template.css
@@ -126,9 +126,9 @@ section.gc-nav-section {
 aside.gc-nav ~ section.gc-nav-section {
   right: 33.33%;
 }
-aside.gc-nav ~ section.gc-nav-section h1 {
+/* aside.gc-nav ~ section.gc-nav-section h1 {
   margin-top: 0px
-}
+} */
 section.gc-nav-section + .pagedetails {
   clear: both;
 }
